src/ui/snapshots/coxtop__ui__regatta__tests__the_key_bar_snapshot_with_inbox_focus.snap
---
source: src/ui/regatta.rs
expression: "key_bar_row(Focus::Inbox, 120)"
---
1-6 frames · ←→ focus · ↑↓ select · ⏎ drill down · t theme · v layout · q quit │ a accept  x deny · : palette
