src/ui/snapshots/coxtop__ui__regatta__tests__the_key_bar_snapshot_with_machines_focus.snap
---
source: src/ui/regatta.rs
assertion_line: 2982
expression: "key_bar_row(Focus::Machines, 120)"
---
1-9 frames · ←→ focus · ↑↓ select │ + lanes up  - lanes down  d drain  a activate  A add machine · : palette
