src/ui/snapshots/coxtop__ui__regatta__tests__the_key_bar_snapshot_with_queue_focus.snap
---
source: src/ui/regatta.rs
assertion_line: 3270
expression: "key_bar_row(Focus::Queue, 120)"
---
1-9 frames · q quit │ ] priority up  [ priority down  n new  e edit  x remove · : palette  w watch  $ spend  h health
