src/ui/snapshots/coxtop__ui__regatta__tests__the_key_bar_snapshot_with_runs_focus.snap
---
source: src/ui/regatta.rs
expression: "key_bar_row(Focus::Runs, 120)"
---
1-6 frames · ←→ focus · ↑↓ select · ⏎ drill down · t theme · p layout · q quit │ p pause  k kill  m move · : palette
