src/ui/snapshots/coxtop__ui__regatta__tests__the_lanes_and_runs_frames_show_each_runs_stage_and_cost_coloured_by_status.snap
---
source: src/ui/regatta.rs
assertion_line: 2877
expression: terminal.backend().to_string()
---
"╭ 4 lanes over 24h ────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                                                           run-a        p1-build · build         $1.37│"
"│                                                                           run-b        p2-review · review       $0.50│"
"│                                                                           run-c        p3-land · land          $12.00│"
"│00:00                                           lanes in use · peak 0                                            00:00│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  RUN          PROJECT        MACHINE    STAGE                               ATT    COST STATUS                       │"
"│  run-a        -              m0         p1-build · build                      1   $1.37 ● running                    │"
"│  run-b        -              m0         p2-review · review                    1   $0.50 ● paused                     │"
"│  run-c        -              m0         p3-land · land                        1  $12.00 ● needs_person               │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
