src/ui/snapshots/coxtop__ui__regatta__tests__the_queue_frame_grouped_has_a_header_per_project_and_other_last.snap
---
source: src/ui/regatta.rs
assertion_line: 3609
expression: terminal.backend().to_string()
---
"╭ 6 queue ─────────────────────────────────────────────────╮"
"│pat-skylight                                              │"
"│  alpha                            ████████████ 1/3 phases│"
"│  delta                            ████████████ 1/3 phases│"
"│pat-towpath                                               │"
"│  gamma                            ████████████ 1/3 phases│"
"│other                                                     │"
"│  beta                             ████████████ 1/3 phases│"
"╰──────────────────────────────────────────────────────────╯"
