src/ui/snapshots/coxtop__ui__regatta__tests__the_queue_frame_shows_a_dim_project_after_the_initiative.snap
---
source: src/ui/regatta.rs
assertion_line: 3267
expression: terminal.backend().to_string()
---
"╭ 6 queue ─────────────────────────────────────────────────╮"
"│  alpha               pat-skylight ████████████ 1/3 phases│"
"│  beta                             ████████████ 1/3 phases│"
"│  gamma                            ████████████ 1/3 phases│"
"╰──────────────────────────────────────────────────────────╯"
