src/ui/snapshots/coxtop__ui__regatta__tests__the_queue_frame_ungrouped_keeps_feed_order.snap
---
source: src/ui/regatta.rs
assertion_line: 3367
expression: terminal.backend().to_string()
---
"╭ 6 queue ─────────────────────────────────────────────────╮"
"│  alpha               pat-skylight ████████████ 1/3 phases│"
"│  beta                             ████████████ 1/3 phases│"
"│  gamma                pat-towpath ████████████ 1/3 phases│"
"│  delta               pat-skylight ████████████ 1/3 phases│"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──────────────────────────────────────────────────────────╯"
