src/ui/snapshots/coxtop__ui__regatta__tests__the_queue_line_draws_the_initiative_alone.snap
---
source: src/ui/regatta.rs
assertion_line: 3554
expression: terminal.backend().to_string()
---
"╭ 6 queue ─────────────────────────────────────────────────╮"
"│  alpha                            ████████████ 1/3 phases│"
"│  beta                             ████████████ 1/3 phases│"
"│  gamma                            ████████████ 1/3 phases│"
"╰──────────────────────────────────────────────────────────╯"
