src/ui/snapshots/coxtop__ui__regatta__tests__the_runs_frame_shows_a_dim_project_at_the_end_of_its_row.snap
---
source: src/ui/regatta.rs
assertion_line: 3243
expression: terminal.backend().to_string()
---
"╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────╮"
"│  RUN          MACHINE    STAGE                               ATT    COST STATUS                  │"
"│  alpha-1      m0         p · n                                 2   $1.50 ● running pat-skylight  │"
"│  beta-1       m0         p · n                                 2   $1.50 ● running               │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
