src/ui/snapshots/coxtop__ui__regatta__tests__the_runs_frame_shows_a_dim_project_column_between_run_and_machine.snap
---
source: src/ui/regatta.rs
assertion_line: 3371
expression: terminal.backend().to_string()
---
"╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  RUN          PROJECT        MACHINE    STAGE                               ATT    COST STATUS                       │"
"│  alpha-1      pat-skylight   m0         p · n                                 2   $1.50 ● running                    │"
"│  beta-1       -              m0         p · n                                 2   $1.50 ● running                    │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
