src/ui/snapshots/coxtop__ui__regatta__tests__two_running_runs_draw_two_lines_in_the_harbor_light_theme.snap
---
source: src/ui/regatta.rs
expression: terminal.backend().to_string()
---
"╭ 8 run cost ──────────────────────────────────────────────────────────────────╮"
"│$5   │                                                               ┌───────┐│"
"│     │                                                               │r-alpha││"
"│     │                                                               │r-beta ││"
"│     │                                                               └───────┘│"
"│     │                                              ⢀⣀⣀⣀⣀⠤⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉   │"
"│$2.50│                                  ⢀⣀⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                         │"
"│     │                      ⢀⣀⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                                     │"
"│     │          ⢀⣀⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                                       ⢀⣀⡠⠤⠔⠒⢀⡀  │"
"│     │⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                                          ⢀⣀⣀⠤⠤⠔⢀⣀⣀⡠⠤⠔⠒⠊⠉⠁   │"
"│$0   │                                               ⠠⠤⠒⠒⠊⠒⠒⠊⠉⠉⠉⠉⠁            │"
"│     └────────────────────────────────────────────────────────────────────────│"
"│ 13:40                                                                   14:10│"
"╰──────────────────────────────────────────────────────────────────────────────╯"
